--- a/Frontend/src/app/pages/dashboard/group-overview/group-overview.component.html
+++ b/Frontend/src/app/pages/dashboard/group-overview/group-overview.component.html
@@ -4,7 +4,7 @@
     <clr-dg-column>Erreichbar</clr-dg-column>
     <clr-dg-column>Status</clr-dg-column>
     <clr-dg-column>Rechteklasse</clr-dg-column>
-    <clr-dg-column>Personalnummer</clr-dg-column>
+    <clr-dg-column [clrDgColType]="'number'">Personalnummer</clr-dg-column>
 
     <clr-dg-placeholder>Lädt...</clr-dg-placeholder>
 
