--- a/Frontend/src/app/pages/group-stats/group-stats.component.html
+++ b/Frontend/src/app/pages/group-stats/group-stats.component.html
@@ -8,7 +8,7 @@
     <clr-dg-column>Name</clr-dg-column>
     <clr-dg-column>Erreichbar</clr-dg-column>
     <clr-dg-column>Status</clr-dg-column>
-    <clr-dg-column>Personalnummer</clr-dg-column>
+    <clr-dg-column [clrDgColType]="'number'">Personalnummer</clr-dg-column>
 
     <clr-dg-placeholder>Lädt...</clr-dg-placeholder>
 
