--- a/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
+++ b/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
@@ -43,7 +43,7 @@
   <a clrVerticalNavLink routerLinkActive="active" routerLink="/register"
     *ngIf="['admin', 'root'].includes(user?.rechteklasse)">
     <clr-icon shape="users" clrVerticalNavIcon></clr-icon>
-    Benutzer hinzufügen
+    Benutzer löschen
   </a>
 
   <br />
