Added delete user, fixed employee profiles and some more stuff on the dashboard

--- a/Frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/Frontend/src/app/pages/dashboard/dashboard.component.html
@@ -56,7 +56,7 @@
     <div [@inOutAnimation]="viewAllGroups">
       <ng-container *ngIf="['admin', 'root'].includes(user.rechteklasse)">
         <button class="btn" (click)="openWizard()">Arbeitsgruppe hinzufügen</button>
-        <dashboard-add-group-wizard [(open)]="open"></dashboard-add-group-wizard>
+        <dashboard-add-group-wizard [(open)]="open" [mobile]="isMobile"></dashboard-add-group-wizard>
       </ng-container>
 
       <ng-container *ngIf="groups">
