--- a/Frontend/src/app/pages/employee-stats/employee-stats.component.html
+++ b/Frontend/src/app/pages/employee-stats/employee-stats.component.html
@@ -22,7 +22,7 @@
               <td>Vertreter:</td>
               <td>
                 <a routerLink="/employee/{{vertreter?.personalnummer}}">
-                  {{(vertreter | employeeName) || ""}}
+                  {{vertreter | employeeName}}
                 </a>
               </td>
             </tr>
