--- a/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
+++ b/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
@@ -40,7 +40,7 @@
     Benutzer hinzufügen
   </a>
 
-  <a clrVerticalNavLink routerLinkActive="active" routerLink="/register"
+  <a clrVerticalNavLink routerLinkActive="active" routerLink="/delete"
     *ngIf="['admin', 'root'].includes(user?.rechteklasse)">
     <clr-icon shape="users" clrVerticalNavIcon></clr-icon>
     Benutzer löschen
