--- a/Frontend/src/app/pages/forms/delete/delete.component.html
+++ b/Frontend/src/app/pages/forms/delete/delete.component.html
@@ -2,7 +2,9 @@
   <form class="login" (ngSubmit)="send()">
     <section class="title">
       <h3 class="welcome">Benutzer löschen</h3>
-      <h5 class="hint">Bitte geben Sie die Daten des Benutzers, den Sie löschen wollen ein!</h5>
+      <h5 class="hint">Bitte geben Sie die Personalnummer des Benutzers, den Sie löschen wollen ein! 
+        Und bestätigen sie mit Ihrem Passwort.
+      </h5>
     </section>
     <div class="login-group">
       <clr-input-container>
