--- a/Frontend/src/app/pages/dashboard/groups/groups.component.html
+++ b/Frontend/src/app/pages/dashboard/groups/groups.component.html
@@ -1,5 +1,5 @@
-<clr-datagrid>
-  <clr-dg-column>Name</clr-dg-column>
+<clr-datagrid [clrDgLoading]="loading">
+  <clr-dg-column [clrDgField]="'bezeichnung'" [clrDgSortOrder]="descSort">Name</clr-dg-column>
   <clr-dg-column>Leiter</clr-dg-column>
   <clr-dg-column>Mitglieder</clr-dg-column>
   <clr-dg-column>ArbeitsgruppenID</clr-dg-column>
