--- a/Frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/Frontend/src/app/pages/dashboard/dashboard.component.html
@@ -46,6 +46,7 @@
     </tr>
   </table>
   <hr />
+  <br />
 
   <div *ngIf="['admin', 'root', 'personnelDepartment'].includes(user.rechteklasse)">
     <button class="btn dashboard-right-button-desktop" (click)="toggleAllGroups()">Anzeigen</button>
@@ -56,7 +57,8 @@
     <div [@inOutAnimation]="viewAllGroups">
       <ng-container *ngIf="['admin', 'root'].includes(user.rechteklasse)">
         <button class="btn" (click)="openWizard()">Arbeitsgruppe hinzufügen</button>
-        <dashboard-add-group-wizard [(open)]="open" [mobile]="isMobile"></dashboard-add-group-wizard>
+        <dashboard-add-group-wizard [(open)]="open" *ngIf="!isMobile"></dashboard-add-group-wizard>
+        <dashboard-add-group-mobile [(open)]="open" *ngIf="isMobile"></dashboard-add-group-mobile>
       </ng-container>
 
       <ng-container *ngIf="groups">
@@ -68,6 +70,8 @@
       <br />
     </div>
   </div>
+
+  <br />
 
   <div id="myGroups">
     <button class="btn dashboard-right-button-desktop" (click)="toggleMyGroups()">Anzeigen</button>
@@ -94,6 +98,19 @@
 
       </ng-container>
     </div>
+  </div>
+
+  <div id="department">
+    <button class="btn dashboard-right-button-desktop" (click)="toggleDepartment()">Anzeigen</button>
+    <h2>Meine Abteilung: {{user.abteilung}}</h2>
+    <button class="btn dashboard-right-button-mobile" (click)="toggleDepartment()">Anzeigen</button>
+    <hr />
+
+    <div [@inOutAnimation]="viewDepartment">
+      <dashboard-department [employees]="departmentUsers" *ngIf="!isMobile"></dashboard-department>
+      <dashboard-department-mobile [employees]="departmentUsers" *ngIf="isMobile"></dashboard-department-mobile>
+    </div>
+
   </div>
   <br />
   <br />
