--- a/Frontend/src/app/pages/employee-stats/employee-stats.component.html
+++ b/Frontend/src/app/pages/employee-stats/employee-stats.component.html
@@ -77,7 +77,7 @@
           <table>
             <tr>
               <td>Rechteklasse:</td>
-              <td>{{user.rechteklasse}}</td>
+              <td>{{user.rechteklasse | accessRights}}</td>
             </tr>
           </table>
         </div>
