--- a/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
+++ b/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <clr-vertical-nav [clrVerticalNavCollapsible]="false" checked>
 
   <ng-container *ngFor="let current of sidebarLinks;let i = index">
-    <clr-vertical-nav-group routerLinkActive="active" (clrVerticalNavGroupExpandedChange)="changeIcon(i, $event)">
+    <clr-vertical-nav-group routerLinkActive="active" (clrVerticalNavGroupExpandedChange)="changeIcon(i, $event)" *ngIf="current">
 
       <clr-icon [attr.shape]="current.icon" clrVerticalNavIcon></clr-icon>
       {{current.title}}
